# Wolf3D

./: CMakeLists.txt  Makefile  README.md  a.out  compile  logs  logs_2  main.c  make_textures.c  map2  map4  read_map.c  test.c  usage.c  wold3d  wolf.h
includes/: wolf.h
libSDL/SDL2_image.framework/Headers/: SDL_image.h
libft/: Makefile  exit_x.c  libft.h
maps/: map1  map2  map3  map4
maps/levels/: lvl_1  lvl_2  lvl_3  lvl_4  lvl_5
maps/mandatory/: mand_map_1  mand_map_2  test_map
rubish/: showmenu.c  test.c
srcs/: cleaner.c  clear_weapon.c  create_map.c  create_textures.c  draw_textures.c  draw_weapon_and_bar.c  init_bar.c  init_textures.c  init_weapon.c  initialization.c  keys.c  main.c  make_minimap.c  moves.c  n_s_e_w.c  ray_casting.c  read_map.c  shots.c  time_and_speed.c  usage.c
wolf3d.dSYM/Contents/Resources/DWARF/: wolf3d
